# jailbreak_root_detection

./: CHANGELOG.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
android/: build.gradle  settings.gradle
android/src/main/cpp/: CMakeLists.txt  antifrida.cpp  syscall.S  syscall.h
android/src/main/kotlin/com/anish/trust_fall/externalstorage/: ExternalStorageCheck.kt
android/src/main/kotlin/com/anish/trust_fall/rooted/: GreaterThan23.kt
ios/: jailbreak_root_detection.podspec
ios/Classes/Extension/: UIDevice+JailBroken.swift
